codama-syn-helpers/tests/meta/as_path_value/from_path.fail.rs
use codama_syn_helpers_test_macros::as_path_value;

#[as_path_value(foo)]
pub struct Test;

fn main() {}
